--- a/octane-eclipse-plugin/.classpath
+++ b/octane-eclipse-plugin/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/failureaccess.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client-gson.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client-jackson2.jar"/>
@@ -17,7 +18,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/httpclient.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpcore.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javax.inject.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jakarta.inject-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsoup.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr305.jar"/>
@@ -28,6 +29,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/octane-plugin-common.jar" sourcepath="/octane-plugin-common"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client-apache-v2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/grpc-context.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grpc-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/j2objc-annotations.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/opencensus-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/opencensus-contrib-http-util.jar"/>
