--- a/octane-eclipse-plugin/build.properties
+++ b/octane-eclipse-plugin/build.properties
@@ -9,6 +9,7 @@ bin.includes = plugin.xml,\
                lib/commons-codec.jar,\
                lib/commons-lang.jar,\
                lib/commons-logging.jar,\
+               lib/commons-io.jar,\
                lib/failureaccess.jar,\
                lib/google-http-client-gson.jar,\
                lib/google-http-client-jackson2.jar,\
@@ -19,7 +20,7 @@ bin.includes = plugin.xml,\
                lib/httpclient.jar,\
                lib/httpcore.jar,\
                lib/jackson-core.jar,\
-               lib/javax.inject.jar,\
+               lib/jakarta.inject-api.jar,\
                lib/json.jar,\
                lib/jsoup.jar,\
                lib/jsr305.jar,\
@@ -28,6 +29,7 @@ bin.includes = plugin.xml,\
                lib/sdk-extension-src.jar,\
                lib/google-http-client-apache-v2.jar,\
                lib/grpc-context.jar,\
+               lib/grpc-api.jar,\
                lib/j2objc-annotations.jar,\
                lib/opencensus-api.jar,\
                lib/opencensus-contrib-http-util.jar
